--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ yarn-error.log*
 
 # local env files
 .env*.local
-/src/.env
+.env
+
 
 # vercel
 .vercel
@@ -34,5 +35,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
 
 .vercel
